# mobile-app

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  esquema_local_rutikal.sql  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/: LaPaz.mbtiles  rutikal_db.sqlite  rutikal_db.sqlite.sqbpro  search_lapaz.sqlite
docs/: diagram.md  mejoras.md  sincronizacion-movil.md
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcworkspace/xcshareddata/swiftpm/: Package.resolved
lib/: main.dart
lib/core/: app_config.dart  constants.dart  preview_mocks.dart  sync_event_bus.dart
lib/core/theme/: app_colors.dart
lib/src/data/datasources/: app_database_service.dart  graph_storage_service.dart  local_tile_server.dart  mbtiles_asset_source.dart  native_bridge.dart  native_bridge_ffi.dart  native_bridge_stub.dart  search_database_service.dart  sqlite_transport_graph_data_source.dart  transport_graph_data_source.dart
lib/src/data/repositories/: auth_repository.dart  content_repository.dart  dijkstra_router.dart  favorites_repository_impl.dart  graph_builder.dart  map_repository_impl.dart  multimodal_routing_engine.dart  native_walking_router.dart  route_geometry_utils.dart  (+4 more)
macos/Runner.xcodeproj/: project.pbxproj
src_native/: CMakeLists.txt  native_logic.cpp
test/: dijkstra_router_test.dart  multimodal_routing_engine_test.dart  routing_bloc_multimodal_test.dart  sync_test.dart  transport_graph_builder_test.dart
windows/runner/: Runner.rc
(+66 files in other folders)
